<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Grouptuity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_bill_splitter">Group Bill Splitter</string>
    <string name="nav_drawer_simple_calculator">Basic Tip Calculator</string>
    <string name="nav_drawer_saved_bills_header">Saved Bills</string>
    <string name="nav_drawer_dark_mode">Dark Mode</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_help">Help &amp; Feedback</string>
    <string name="basic_tip_calc_toolbar_title">Basic Tip Calculator</string>
    <string name="billsplit_tab_diners">Diners</string>
    <string name="billsplit_tab_items">Items</string>
    <string name="billsplit_tab_taxtip">Tax&amp;Tip</string>
    <string name="billsplit_tab_payment">Pay</string>
    <string name="billsplit_menu_diners_new_bill">Create new bill</string>
    <string name="billsplit_menu_diners_remove_all_diners">Remove all diners</string>
    <string name="billsplit_menu_diners_add_self">Include yourself</string>
    <string name="billsplit_menu_items_remove_all_items">Remove all items</string>
    <string name="billsplit_menu_taxtip_reset">Reset tax &amp; tip</string>
    <string name="billsplit_menu_taxtip_tip_applied_to_tax">Tip applied to tax</string>
    <string name="billsplit_menu_taxtip_discounts_reduce_tip">Discounts reduce tip</string>
    <string name="billsplit_menu_pay_reset">Reset payments</string>
    <string name="billsplit_snackbar_pay_reset">Tax and tip reset to default percentages</string>
    <string name="billsplit_alert_remove_all_diners_title">Remove all diners?</string>
    <string name="billsplit_alert_remove_all_diners_message">This action cannot be undone</string>
    <string name="billsplit_alert_remove_all_diners_snackbar">All diners removed from bill</string>
    <string name="billsplit_alert_remove_all_items_title">Remove all items?</string>
    <string name="billsplit_alert_remove_all_items_message">This action cannot be undone</string>
    <string name="billsplit_alert_remove_all_items_snackbar">All items removed from bill</string>
    <string name="diners_add_self">Include yourself</string>
    <string name="diners_add_self_name_entry_title">Your name</string>
    <string name="diners_add_self_name_entry_hint">Enter your name</string>
    <string name="diners_zero_items">0 items</string>
    <plurals name="diners_num_items_with_subtotal">
        <item quantity="one">%2$s (1 item)</item>
        <item quantity="other">%2$s (%1$d items)</item>
    </plurals>
    <plurals name="addressbook_toolbar_num_selected">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="addressbook_toolbar_select_diners">Select Diners</string>
    <string name="addressbook_toolbar_search_instructions">Search contacts</string>
    <string name="addressbook_toolbar_create_instructions">Enter diner name</string>
    <string name="addressbook_toolbar_create_button">Create New Diner:</string>
    <string name="addressbook_toolbar_new_contact">New Contact</string>
    <string name="addressbook_toolbar_favorite">Favorite</string>
    <string name="addressbook_toolbar_unfavorite">Unfavorite</string>
    <string name="addressbook_toolbar_hide">Hide</string>
    <string name="addressbook_toolbar_unhide">Unhide</string>
    <string name="addressbook_toolbar_refresh">Refresh list</string>
    <string name="addressbook_toolbar_reset_favorites">Clear favorites</string>
    <string name="addressbook_toolbar_reset_hidden">Unhide all</string>
    <string name="addressbook_toolbar_show_hidden">Show hidden</string>
    <string name="addressbook_fab_new_contact">New Contact</string>
    <string name="addressbook_alert_read_contacts_title">Displaying your contacts</string>
    <string name="addressbook_alert_read_contacts_message">Grouptuity lets you select people from your device\s saved contacts, but enabling this feature needs your permission</string>
    <string name="addressbook_alert_reset_hidden_title">Reset all hidden contacts?</string>
    <string name="addressbook_alert_reset_hidden_message">Any contacts that were hidden will have that status cleared. This action cannot be reversed.</string>
    <string name="addressbook_alert_reset_favorites_title">Reset all favorite contacts?</string>
    <string name="addressbook_alert_reset_favorites_message">Any contacts that were favorited will have that status cleared. This action cannot be reversed.</string>
    <string name="addressbook_snackbar_no_read_contacts_permission">Cannot display all your contacts until permission is granted</string>
    <string name="addressbook_snackbar_favorited">Contacts favorited</string>
    <string name="addressbook_snackbar_unfavorited">Contacts unfavorited</string>
    <string name="addressbook_snackbar_unhide_all">All contacts visible</string>
    <string name="addressbook_snackbar_unfavorite_all">All favorites cleared</string>
    <string name="addressbook_snackbar_hidden">Contacts hidden</string>
    <string name="addressbook_snackbar_unhidden">Contacts unhidden</string>
    <string name="addressbook_listitem_hidden">(contact hidden)</string>
    <string name="contact_entry_toolbar_title_new_diner">Create New Diner</string>
    <string name="contact_entry_cancel_field_entry">Cancel Entry</string>
    <string name="contact_entry_finish_field_entry">Finish Entry</string>
    <string name="contact_entry_create_diner">Create Diner</string>
    <string name="contact_entry_name_hint">Contact Name</string>
    <string name="dinerdetails_toolbar_edit">Edit diner</string>
    <string name="dinerdetails_biographics_address_not_set">(%s not set)</string>
    <string name="dinerdetails_biographics_scan_qr_code">Scan QR code</string>
    <string name="dinerdetails_biographics_clear_address">Clear</string>
    <string name="dinerdetails_bill_section_title">Restaurant Bill</string>
    <string name="dinerdetails_items_subtotal_section">Subtotal</string>
    <plurals name="dinerdetails_item_split">
        <item quantity="other">"(%2$s split %1$d ways)</item>
    </plurals>
    <string name="dinerdetails_discounts_section">Discounts</string>
    <string name="dinerdetails_discount_onitems_currency_single">%1$s off %2$s</string>
    <plurals name="dinerdetails_discount_onitems_currency_multiple">
        <item quantity="one">%1$s off 1 item</item>
        <item quantity="other">%1$s split over %2$d items</item>
    </plurals>
    <string name="dinerdetails_discount_onitems_currency_all">%s off entire bill</string>
    <string name="dinerdetails_discount_item_sharing_two">(shared with %s)</string>
    <plurals name="dinerdetails_discount_item_sharing_many">
        <item quantity="one">(shared with 1 other diner)</item>
        <item quantity="other">(shared with %d other diners)</item>
    </plurals>
    <string name="dinerdetails_discount_item_sharing_all">(shared with everyone)</string>
    <string name="dinerdetails_discount_fordiners_currency_single">%1$s for %2$s</string>
    <plurals name="dinerdetails_discount_fordiners_currency_multiple">
        <item quantity="one">%1$s for 1 diner</item>
        <item quantity="other">%1$s shared by %2$d diners</item>
    </plurals>
    <string name="dinerdetails_discount_fordiners_currency_all">%s shared by everyone</string>
    <string name="dinerdetails_discount_unused_title">Unused Discounts</string>
    <string name="dinerdetails_discount_borrowed_title">Borrowed Unused Discounts</string>
    <string name="dinerdetails_discount_total_title">Total Discounts</string>
    <string name="dinerdetails_taxtip_section_title">ResTax &amp; Tip</string>
    <string name="dinerdetails_taxtip_afterdiscounts_title">Including Discounts</string>
    <string name="dinerdetails_taxtip_tax_title">After discounts</string>
    <string name="dinerdetails_taxtip_total_title">Total</string>
    <string name="dinerdetails_debts_section">Debt Settlement</string>
    <string name="dinerdetails_reimbursements_title">Discount Purchases</string>
    <string name="dinerdetails_reimbursement_pay">Pay reimbursement</string>
    <string name="dinerdetails_reimbursement_receive">Receive reimbursement</string>
    <string name="dinerdetails_debts_add">Add Debt</string>
    <plurals name="dinerdetails_debt_paid">
        <item quantity="one">(%1$s owed to %2$s)</item>
        <item quantity="other">(%1$s owed to %2$d diners)</item>
    </plurals>
    <plurals name="dinerdetails_shared_debt_paid">
        <item quantity="one">(Share of %1$s owed to %2$s)</item>
        <item quantity="other">(Share of %1$s owed to %2$d diners)</item>
    </plurals>
    <plurals name="dinerdetails_debt_received">
        <item quantity="one">(%1$s owed by %2$s)</item>
        <item quantity="other">(%1$s owed by %2$d diners)</item>
    </plurals>
    <plurals name="dinerdetails_shared_debt_received">
        <item quantity="one">(Share of %1$s owed by %2$s)</item>
        <item quantity="other">(Share of %1$s owed by %2$d diners)</item>
    </plurals>
    <string name="dinerdetails_debts_total_owed_to_others">Total Paid</string>
    <string name="dinerdetails_debts_total_owed_by_others">Total Received</string>
    <string name="debtentry_toolbar_edit_name">Edit debt name</string>
    <string name="debtentry_toolbar_enter_name">Enter debt name</string>
    <string name="debtentry_toolbar_debt_number">Debt #</string>
    <string name="debtentry_toolbar_select_both">Select diners</string>
    <string name="debtentry_toolbar_select_creditor">Select who is owed money</string>
    <string name="debtentry_toolbar_select_debtor">Select who owes money</string>
    <string name="debtentry_1_diner_paying">1 diner</string>
    <string name="debtentry_paying_1_diner">1 diner</string>
    <string name="debtentry_toolbar_single_paying_single">%1$s paying %2$s</string>
    <plurals name="debtentry_toolbar_single_paying_multiple">
        <item quantity="one">%1$s paying %2$d diner</item>
        <item quantity="other">%1$s paying %2$d diners</item>
    </plurals>
    <plurals name="debtentry_toolbar_multiple_paying_single">
        <item quantity="one">%1$d diner paying %2$s</item>
        <item quantity="other">%1$d diners paying %2$s</item>
    </plurals>
    <plurals name="debtentry_toolbar_multiple_paying">
        <item quantity="one">%1$d diner paying</item>
        <item quantity="other">%1$d diners paying</item>
    </plurals>
    <plurals name="debtentry_toolbar_paying_multiple">
        <item quantity="one">%1$d diner</item>
        <item quantity="other">%1$d diners</item>
    </plurals>
    <string name="debtentry_pays">Pays</string>
    <string name="debtentry_receives">Receives</string>
    <string name="debtentry_creditor_message">Receive %s</string>
    <string name="debtentry_debtor_message">Pay %s</string>
    <string name="debtentry_dual_nothing_message">Debts cancel out ($0)</string>
    <string name="taxtip_add_discount_button">Add</string>
    <string name="taxtip_edit_discounts_button">Discounts</string>
    <string name="discounts_toolbar_title">Discounts</string>
    <string name="decimal_symbol">.</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="equals_symbol">\u003D</string>
</resources>