<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_group_bill_splitter"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/nav_drawer_bill_splitter"
            android:checked="true"/>
        <item
            android:id="@+id/nav_simple_calculator"
            android:icon="@drawable/ic_menu_calc"
            android:title="@string/nav_drawer_simple_calculator"/>
    </group>

    <item
        android:id="@+id/nav_savedbills"
        android:title="@string/nav_drawer_saved_bills_header">

        <menu>
            <item
                android:id="@+id/placholder"
                android:title="placholder"/>
        </menu>
    </item>

    <group
        android:id="@+id/nav_group_app_details"
        android:checkableBehavior="none">

        <item android:id="@+id/dark_mode_switch"
            app:actionLayout="@layout/menuitem_switch"
            android:title="@string/nav_drawer_dark_mode"
            android:icon="@drawable/ic_menu_dark_mode"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_drawer_settings"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/nav_drawer_help"/>
    </group>
</menu>