<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorBackground"
        android:elevation="4dp">

        <TextView
            android:id="@+id/displayTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingStart="52dp"
            android:paddingEnd="52dp"
            android:gravity="center"
            android:textSize="40sp"
            android:maxLines="1"
            style="@android:style/TextAppearance.Material.Large"/>

        <ImageButton
            android:id="@+id/button_backspace"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitXY"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            app:tint="?attr/colorOnBackgroundLowEmphasis"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_backspace"/>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorTertiary">

        <!-- 1st Row -->
        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_7"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_4"
            app:layout_constraintRight_toLeftOf="@+id/button_8"/>

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_8"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="@id/button_7"
            app:layout_constraintBottom_toBottomOf="@id/button_7"
            app:layout_constraintLeft_toRightOf="@+id/button_7"
            app:layout_constraintRight_toLeftOf="@+id/button_9"/>

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_9"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="@id/button_7"
            app:layout_constraintBottom_toBottomOf="@id/button_7"
            app:layout_constraintLeft_toRightOf="@+id/button_8"
            app:layout_constraintRight_toRightOf="parent"/>

        <!-- 2nd Row -->
        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_4"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_7"
            app:layout_constraintBottom_toTopOf="@+id/button_1"
            app:layout_constraintRight_toLeftOf="@+id/button_5"/>

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_5"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintLeft_toRightOf="@+id/button_4"
            app:layout_constraintRight_toLeftOf="@+id/button_6"
            app:layout_constraintTop_toTopOf="@id/button_4"
            app:layout_constraintBottom_toBottomOf="@id/button_4"/>

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_6"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="@id/button_4"
            app:layout_constraintBottom_toBottomOf="@id/button_4"
            app:layout_constraintLeft_toRightOf="@+id/button_5"
            app:layout_constraintRight_toRightOf="parent"/>

        <!-- 3rd Row -->
        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_1"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_0"
            app:layout_constraintTop_toBottomOf="@+id/button_4"
            app:layout_constraintRight_toLeftOf="@+id/button_2"/>

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_2"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="@id/button_1"
            app:layout_constraintBottom_toBottomOf="@id/button_1"
            app:layout_constraintLeft_toRightOf="@+id/button_1"
            app:layout_constraintRight_toLeftOf="@+id/button_3"/>

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_3"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="@id/button_1"
            app:layout_constraintBottom_toBottomOf="@id/button_1"
            app:layout_constraintLeft_toRightOf="@+id/button_2"
            app:layout_constraintRight_toRightOf="parent"/>

        <!-- 4th Row -->
        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/number_0"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_decimal"/>

        <Button
            android:id="@+id/button_decimal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/decimal_symbol"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintLeft_toRightOf="@+id/button_0"
            app:layout_constraintRight_toLeftOf="@+id/button_accept"
            app:layout_constraintTop_toTopOf="@id/button_0"
            app:layout_constraintBottom_toBottomOf="@id/button_0"/>

        <Button
            android:id="@+id/button_accept"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/equals_symbol"
            android:textSize="@dimen/calculator_button_text_size"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="?attr/colorTertiary"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="@id/button_0"
            app:layout_constraintBottom_toBottomOf="@id/button_0"
            app:layout_constraintLeft_toRightOf="@+id/button_decimal"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>