<?xml version="1.0" encoding="utf-8"?>
<com.grouptuity.grouptuity.ui.custom.views.LockableFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Grouptuity.Secondary">

    <ImageView
        android:id="@+id/covered_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container"
        android:transitionName="discountsContainerTransitionName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_discounts_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:gravity="center"
            android:text="@string/taxtip_edit_discounts_button"
            android:textSize="18sp"
            android:textColor="?attr/colorOnSecondary"
            app:strokeColor="?attr/colorSecondary"
            app:backgroundTint="?attr/colorSecondary"
            app:rippleColor="?attr/colorSecondaryHighlight"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_discount_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:gravity="center"
            android:text="@string/taxtip_add_discount_button"
            android:textSize="18sp"
            android:textColor="?attr/colorSecondary"
            app:strokeColor="?attr/colorSecondary"
            app:rippleColor="?attr/colorSecondaryHighlight"
            app:backgroundTint="?attr/colorBackground"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <View
                    android:id="@+id/status_bar_background_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/status_bar_height"
                    android:background="?attr/colorSecondaryVariant"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/discounts_toolbar_title"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="?attr/colorBackgroundVariant"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/frag_discounts_listitem"/>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_add"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </com.google.android.material.card.MaterialCardView>
</com.grouptuity.grouptuity.ui.custom.views.LockableFrameLayout>